Fix scrollbar behavior in Firefox

--- a/gerby/assets/scss/_tag.scss
+++ b/gerby/assets/scss/_tag.scss
@@ -48,8 +48,7 @@ div.html {
 
 div.html div.equation {
   margin-top: -.3rem;
-  overflow-x: scroll;
-  overflow: -moz-scrollbars-none;
+  overflow-x: -moz-scrollbars-none;
 }
 
 div.equation::-webkit-scrollbar {
